--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,3 +4,9 @@ requires = [
     "pybind11>=2.10.0",
 ]
 build-backend = "setuptools.build_meta"
+
+[project]
+name = "xfoil"
+version = "0.2.0"
+description = "Python wrapper for XFOIL"
+requires-python = ">=3.6"
